--- a/product.yml
+++ b/product.yml
@@ -16,14 +16,12 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
-  #K8
   cloud:
     kubernetes:
       discovery:
         enabled: true
       config:
         enabled: true
-
 management:
   tracing:
     sampling:
@@ -41,10 +39,9 @@ management:
   zipkin:
     tracing:
       endpoint: http://zipkin:9411/api/v2/spans
-
 chaos-engineering:
-  wait: false
-  duration: 10
+  wait: true
+  duration: 30
   kill-service: false
   return-500: false
   return-400: false
