--- a/payment.yml
+++ b/payment.yml
@@ -10,7 +10,10 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
+    open-in-view: false    # Best practice to disable
+    flyway:
+      baseline-on-migrate: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
