--- a/product.yml
+++ b/product.yml
@@ -10,7 +10,10 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
+    open-in-view: false
+    flyway:
+      baseline-on-migrate: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
@@ -40,8 +43,8 @@ management:
     tracing:
       endpoint: http://zipkin:9411/api/v2/spans
 chaos-engineering:
-  wait: false
-  duration: 60000
+  wait: true
+  duration: 10000
   kill-service: false
   return-500: false
   return-400: false
