--- a/product.yml
+++ b/product.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-    open-in-view: false    # Best practice to disable
+    open-in-view: false
     flyway:
       baseline-on-migrate: true
     database: postgresql
@@ -43,8 +43,8 @@ management:
     tracing:
       endpoint: http://zipkin:9411/api/v2/spans
 chaos-engineering:
-  wait: false
-  duration: 60000
+  wait: true
+  duration: 10000
   kill-service: false
   return-500: false
   return-400: false
