--- a/payment.yml
+++ b/payment.yml
@@ -10,10 +10,7 @@ spring:
     password: password
   jpa:
     hibernate:
-      ddl-auto: validate
-    open-in-view: false    # Best practice to disable
-    flyway:
-      baseline-on-migrate: true
+      ddl-auto: create
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
