--- a/product.yml
+++ b/product.yml
@@ -45,7 +45,7 @@ management:
 chaos-engineering:
   wait: false
   duration: 60000
-  kill-service: true
+  kill-service: false
   return-500: false
   return-400: false
   return-429: false
