--- a/order.yml
+++ b/order.yml
@@ -16,20 +16,17 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
-  #K8
   cloud:
     kubernetes:
       discovery:
         enabled: true
       config:
         enabled: true
-
 application:
   config:
-    customer-url: http://customer:8090/api/v1/customers
+    customer-url: http://wrong_url
     payment-url: http://payment:8060/api/v1/payments
     product-url: http://product:8050/api/v1/products
-
 management:
   tracing:
     sampling:
@@ -47,7 +44,6 @@ management:
   zipkin:
     tracing:
       endpoint: http://zipkin:9411/api/v2/spans
-
 resilience:
   feature: none
   fallback-mocks:
