--- a/order.yml
+++ b/order.yml
@@ -45,7 +45,7 @@ management:
     tracing:
       endpoint: http://zipkin:9411/api/v2/spans
 resilience:
-  feature: queuedRequest
+  feature: retryBackoff
   fallback-mocks:
     exampleFallback: '{"example": "example"}'
     findAllStudentsBySchool: '[{ "id": 1, "firstname": "John", "lastname": "Doe",
