Update configuration in order.yml

--- a/order.yml
+++ b/order.yml
@@ -26,7 +26,7 @@ application:
   config:
     customer-url: http://customer:8090/api/v1/customers
     payment-url: http://payment:8060/api/v1/payments
-    product-url: http://product:8050/api/v1/products
+    product-url: http://wrong_url
 management:
   tracing:
     sampling:
