--- a/product.yml
+++ b/product.yml
@@ -43,7 +43,7 @@ management:
     tracing:
       endpoint: http://zipkin:9411/api/v2/spans
 chaos-engineering:
-  wait: false
+  wait: true
   duration: 60000
   kill-service: true
   return-500: false
